# Mythbreaker

./: .gitignore  CMakeLists.txt  Project Concept
saves/: quicksave.json
scripts/: compile_shaders.ps1
shaders/: basic.frag  basic.vert  lit.frag  lit.vert  sky.frag  sky.vert  textured.frag  textured.vert  triangle.vert  triangle.vert.spv
src/app/: main.cpp
src/core/: Event.h  EventBus.h  JobSystem.h  RegionStateMachine.h
src/engine/: Input.cpp  Input.h  Logger.cpp  Logger.h  RegionState.h  SaveLoad.h  Timer.cpp  Timer.h
src/engine/ecs/: Components.h  Entity.h  Systems.h  World.h
src/engine/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTypes.h
src/platform/: main.cpp
